<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/colorTextIcons"
        android:background="@color/colorPrimary"
        android:text="@string/new_fuel_tank"/>

    <Spinner
        android:id="@+id/spn_add_fuel_tank_fuel_type"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:popupBackground="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="8dp"
        android:id="@+id/til_add_fuel_tank_capacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/capacity"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_add_fuel_tank_consumption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:inputType="numberDecimal"
            android:hint="@string/consumption"
            android:maxLines="1"
            android:maxLength="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_gravity="end"
        android:id="@+id/btn_dialog_add_fuel_tank_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        style="@style/Widget.AppCompat.Button.Borderless"/>
</LinearLayout>