<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context="elsys.mycar.mycarpro.loginscreen.RegisterFragment"
    tools:showIn="@layout/activity_register">

    <android.support.constraint.ConstraintLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_first_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColorHint="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:backgroundTint="@android:color/white"
                android:inputType="textPersonName"
                android:maxLength="32"
                android:maxLines="1"
                android:hint="@string/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_last_name"
            app:layout_constraintTop_toBottomOf="@+id/til_register_first_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColorHint="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:backgroundTint="@android:color/white"
                android:inputType="textPersonName"
                android:maxLength="32"
                android:maxLines="1"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_register_email"
            app:layout_constraintTop_toBottomOf="@+id/til_register_last_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColorHint="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:backgroundTint="@android:color/white"
                android:inputType="textEmailAddress"
                android:maxLength="254"
                android:maxLines="1"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:textColorHint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/til_register_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/til_register_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:backgroundTint="@android:color/white"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/til_register_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_register_to_login"
            style="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/already_a_member_login"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>
