<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="elsys.mycar.mycarpro.addedit.service.AddEditServiceFragment"
    tools:showIn="@layout/activity_add_edit_service">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:padding="16dp"
            android:drawableTint="@color/colorPrimary"
            android:drawableTop="@drawable/ic_event"
            android:text="@string/date"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btn_add_service_time"
            android:id="@+id/btn_add_service_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:padding="16dp"
            android:drawableTint="@color/colorPrimary"
            android:drawableTop="@drawable/ic_time"
            android:text="@string/time"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintLeft_toRightOf="@+id/btn_add_service_date"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/btn_add_service_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <View
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_service_date"
            android:background="@color/colorPrimary"
            android:layout_width="0dp"
            android:layout_height="1dp" />

        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/btn_add_service_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:id="@+id/til_add_service_type"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:maxLines="1"
                android:maxLength="36"
                android:inputType="textAutoComplete|textCapWords"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_label_outline"
                android:textSize="26sp"
                android:hint="@string/service_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/til_add_service_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/til_add_service_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:maxLines="1"
                android:maxLength="4"
                android:inputType="numberDecimal"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_money"
                android:hint="@string/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/til_add_service_price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/til_add_service_odometer"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:maxLines="1"
                android:maxLength="7"
                android:inputType="numberSigned"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_odometer"
                android:hint="@string/odometer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            app:layout_constraintTop_toBottomOf="@+id/til_add_service_odometer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:id="@+id/til_add_service_note"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:maxLength="1024"
                android:inputType="textMultiLine"
                android:drawablePadding="16dp"
                android:drawableLeft="@drawable/ic_note"
                android:hint="@string/other_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>